--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 	<footer><span class="cr">&copy; <a href="https://www.zippetomylou.com">www.zippetomylou.com</a></span></footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="js/config.js"></script>
     <script src="js/app.js"></script>
   </body>
