updating footer link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</nav>
     	<article id="allTimeMembers" class="contentBox"></article>
     </main>
-	<footer><span class="cr">&copy; <a href="https://www.zippetomylou.com">www.zippetomylou.com</a></span></footer>
+	<footer><span class="cr">&copy; <a href="http://www.brandonzippe.name">brandonzippe.name</a></span></footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
