--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="twitter:site" content="@zippetomylou">
     <meta name="author" content="Brandon Zippe">
     <meta name="format-detection" content="telephone=yes">
-    <link rel="home" href="http://www.legofrecord.com/">
+    <link rel="home" href="https://www.legofrecord.com/">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
@@ -49,8 +49,8 @@
 		</nav>
     	<article id="allTimeMembers" class="contentBox"></article>
     </main>
-	<footer><span class="cr">&copy; <a href="http://www.brandonzippe.name">brandonzippe.name</a></span></footer>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+	<footer><span class="cr">&copy; <a href="https://www.brandonzippe.name">brandonzippe.name</a></span></footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
