adding playoff wins

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 			<span id="data-pf" class="sortBtn">Points For</span>
       <span id="data-pa" class="sortBtn">Points Against</span>
       <span id="data-tb" class="sortBtn">Toilet Bowls</span>
+      <span id="data-powin" class="sortBtn">Playoff Wins</span>
+      <span id="data-poperc" class="sortBtn">Playoff Win %</span>
 		</nav>
     	<article id="allTimeMembers" class="contentBox"></article>
     </main>
