--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>L.E.G. of Record</title>
     <meta itemprop="name" content="League of Extrodinary Genitals">
-    <meta name="description" content="">
+    <meta name="description" content="This is a record of the worlds most extrodinary genitals and how they measure up to one another.">
     <meta name="keywords" content="">
     <meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="twitter:site" content="@zippetomylou">
     <meta name="author" content="Brandon Zippe">
     <meta name="format-detection" content="telephone=yes">
     <link rel="home" href="https://www.legofrecord.com/">
