updates for Sleeper

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <span id="data-powin" class="sortBtn">Playoff Wins</span>
       <span id="data-poperc" class="sortBtn">Playoff Win %</span>
 		</nav>
-    	<article id="allTimeMembers" class="contentBox"></article>
+    	<article id="allTimeMembers" class="contentBox"><span class="loading">SHUT UP CANTU IT'S LOADING...</span></article>
     </main>
 	<footer><span class="cr">&copy; <a href="https://www.brandonzippe.name">brandonzippe.name</a></span></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
